--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
       </div>
       <!-- Banner Ends -->
     </header>
-    <main class="max-w-6xl mx-auto">
-      <section class="my-12">
+    <main class="max-w-sm lg:max-w-6xl mx-auto">
+      <!-- Women Section -->
+      <section class="my-12 text-center md:text-left lg:text-left">
         <h3 class="uppercase text-[#363958] font-bebas-neue text-5xl">
           Woman Jacket
         </h3>
@@ -117,9 +118,7 @@
               src="images/jacket-2.png"
               alt="Yellow Jacket"
             />
-            <h4 class="text-2xl text-[#363958] font-bold">
-              Yellow Coat Jacket
-            </h4>
+            <h4 class="text-2xl text-[#363958] font-bold">Ladies Jacket</h4>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
@@ -156,7 +155,130 @@
               alt="Yellow Jacket"
             />
             <h4 class="text-2xl text-[#363958] font-bold">
-              Yellow Coat Jacket
+              Woman Leather Jacket
+            </h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="flex justify-between items-center">
+              <h4 class="text-[#FABE4C] text-4xl font-black">$234</h4>
+              <button
+                class="bg-green-400 px-8 py-4 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 inline"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                  />
+                </svg>
+
+                Buy Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Men Section -->
+      <section class="my-12 text-center md:text-left lg:text-left">
+        <h3 class="uppercase text-[#363958] font-bebas-neue text-5xl">
+          Man Jacket
+        </h3>
+        <!-- Jacket Card Container -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+          <!-- Jacket Card-1 -->
+          <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
+            <img
+              class="rounded-3xl bg-[#F1F1F1] p-5"
+              src="images/jacket-4.png"
+              alt="Yellow Jacket"
+            />
+            <h4 class="text-2xl text-[#363958] font-bold">
+              Snowboard Jacket Mens
+            </h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="flex justify-between items-center">
+              <h4 class="text-[#FABE4C] text-4xl font-black">$234</h4>
+              <button
+                class="bg-green-400 px-8 py-4 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 inline"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                  />
+                </svg>
+
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <!-- Jacket Card-2 -->
+          <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
+            <img
+              class="rounded-3xl bg-[#F1F1F1] p-5"
+              src="images/jacket-5.png"
+              alt="Yellow Jacket"
+            />
+            <h4 class="text-2xl text-[#363958] font-bold">
+              Man Leather Jackets
+            </h4>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="flex justify-between items-center">
+              <h4 class="text-[#FABE4C] text-4xl font-black">$234</h4>
+              <button
+                class="bg-green-400 px-8 py-4 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 inline"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                  />
+                </svg>
+
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <!-- Jacket Card-3 -->
+          <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
+            <img
+              class="rounded-3xl bg-[#F1F1F1] p-5"
+              src="images/jacket-6.png"
+              alt="Yellow Jacket"
+            />
+            <h4 class="text-2xl text-[#363958] font-bold">
+              Man Casual Jackets
             </h4>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
